--- a/src/app/components/admin-depts/admin-depts.component.html
+++ b/src/app/components/admin-depts/admin-depts.component.html
@@ -1,222 +1,228 @@
 <div class="admin-dept-container">
   <div class="table-depts">
-
-  <p-table
-    #dataTable
-    [columns]="thData"
-    [value]="tdData"
-    [rows]="5"
-    [paginator]="true"
-    [rowsPerPageOptions]="[5, 10, 25, 50]"
-    [(selection)]="tbSelectedRows"
-    [rowHover]="true"
-    dataKey="slIndex"
-    editMode="row"
-    currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
-    [showCurrentPageReport]="true"
-    [loading]="loading"
-    styleClass="p-datatable-gridlines"
-    scrollHeight="42.857rem"
-    scrollDirection="horizontal"
-    responsiveLayout="scroll"
-    [tableStyle]="{ width: '100%' }"
-  >
-    <ng-template pTemplate="header" let-columns>
-      <tr>
-        <th *ngIf="tdData" class="sticky-column-checkboxes sticky-checkboxes-main">Actions</th>
-        <th
-          *ngFor="let col of columns"
-          pSortableColumn="{{ col.field }}"
-          class="stck-head"
-        >
-          {{ col.title }}<p-sortIcon field="{{ col.field }}"></p-sortIcon>
-          <p-columnFilter
-            type="text"
-            field="{{ col.field }}"
-            display="menu"
-          ></p-columnFilter>
-        </th>
-      </tr>
-    </ng-template>
-
-    <ng-template
-      pTemplate="body"
-      let-rowData
-      let-columns="columns"
-      let-rowIndex="rowIndex"
-      let-editing="editing"
+    <p-table
+      #dataTable
+      [columns]="thData"
+      [value]="tdData"
+      [rows]="5"
+      [paginator]="true"
+      [rowsPerPageOptions]="[5, 10, 25, 50]"
+      [(selection)]="tbSelectedRows"
+      [rowHover]="true"
+      dataKey="slIndex"
+      editMode="row"
+      currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
+      [showCurrentPageReport]="true"
+      [loading]="loading"
+      styleClass="p-datatable-gridlines"
+      scrollHeight="42.857rem"
+      scrollDirection="horizontal"
+      responsiveLayout="scroll"
+      [tableStyle]="{ width: '100%' }"
     >
-      <tr [pEditableRow]="rowData" id="tr{{ rowIndex }}">
-        <td class="sticky-column-checkboxes">
-          <button
-            pRipple
-            *ngIf="!editing"
-            type="button"
-            pInitEditableRow
-            (click)="onRowEditInit(rowData, rowIndex)"
-            class="iconbutton-neumorphism edit-icon margin-rt"
+      <ng-template pTemplate="header" let-columns>
+        <tr>
+          <th
+            *ngIf="tdData"
+            class="sticky-column-checkboxes sticky-checkboxes-main"
           >
-            <i class="bi bi-pencil-square"></i>
-          </button>
-          <button
-            pRipple
-            *ngIf="!editing"
-            type="button"
-            (click)="onRowDeleteRow(rowIndex)"
-            class="iconbutton-neumorphism trash-icon"
+            Actions
+          </th>
+          <th
+            *ngFor="let col of columns"
+            pSortableColumn="{{ col.field }}"
+            class="stck-head"
           >
-            <i class="bi bi-trash-fill"></i>
-          </button>
-          <button
-            pRipple
-            *ngIf="editing"
-            type="button"
-            pSaveEditableRow
-            (click)="onRowEditSave(rowData, rowIndex)"
-            class="iconbutton-neumorphism margin-rt"
-          >
-            <i class="pi pi-check"></i>
-          </button>
-          <button
-            pRipple
-            *ngIf="editing"
-            type="button"
-            pCancelEditableRow
-            (click)="onRowEditCancel(rowData, rowIndex)"
-            class="iconbutton-neumorphism"
-          >
-            <i class="pi pi-times"></i>
-          </button>
-        </td>
-        <td *ngFor="let col of columns" class="depts-container">
-          <p-cellEditor>
-            <ng-template pTemplate="input">
-              <ng-container
-                [ngSwitch]="
-                    col.field === 'lead'
-                    ? 'lead'
-                    : -1
-                "
-              >
+            {{ col.title }}<p-sortIcon field="{{ col.field }}"></p-sortIcon>
+            <p-columnFilter
+              type="text"
+              field="{{ col.field }}"
+              display="menu"
+            ></p-columnFilter>
+          </th>
+        </tr>
+      </ng-template>
 
-
-                <ng-container *ngSwitchCase="'lead'">
-                  <p-multiSelect [options]="selectLeads" [(ngModel)]="rowData[col.field]" optionLabel="name" optionValue="name" placeholder="Leads"></p-multiSelect>
-                </ng-container>
-
-                <ng-container *ngSwitchDefault>
-                  <mat-form-field appearance="standard">
-                    <mat-label>{{ col.title }}</mat-label>
-                    <input
-                      matInput
-                      type="{{ col.element_type }}"
-                      placeholder="New {{ col.field }}"
+      <ng-template
+        pTemplate="body"
+        let-rowData
+        let-columns="columns"
+        let-rowIndex="rowIndex"
+        let-editing="editing"
+      >
+        <tr [pEditableRow]="rowData" id="tr{{ rowIndex }}">
+          <td class="sticky-column-checkboxes">
+            <button
+              pRipple
+              *ngIf="!editing"
+              type="button"
+              pInitEditableRow
+              (click)="onRowEditInit(rowData, rowIndex)"
+              class="iconbutton-neumorphism edit-icon"
+            >
+              <i class="bi bi-pencil-square"></i>
+            </button>
+            <button
+              pRipple
+              *ngIf="!editing"
+              type="button"
+              (click)="onRowDeleteRow(rowIndex)"
+              class="iconbutton-neumorphism trash-icon"
+            >
+              <i class="bi bi-trash-fill"></i>
+            </button>
+            <button
+              pRipple
+              *ngIf="editing"
+              type="button"
+              pSaveEditableRow
+              (click)="onRowEditSave(rowData, rowIndex)"
+              class="iconbutton-neumorphism"
+            >
+              <i class="pi pi-check"></i>
+            </button>
+            <button
+              pRipple
+              *ngIf="editing"
+              type="button"
+              pCancelEditableRow
+              (click)="onRowEditCancel(rowIndex)"
+              class="iconbutton-neumorphism"
+            >
+              <i class="pi pi-times"></i>
+            </button>
+          </td>
+          <td *ngFor="let col of columns" class="depts-container">
+            <p-cellEditor>
+              <ng-template pTemplate="input">
+                <ng-container [ngSwitch]="col.field === 'lead' ? 'lead' : -1">
+                  <ng-container *ngSwitchCase="'lead'">
+                    <p-dropdown
+                      [options]="selectLeads"
+                      class="input-neumorphism"
+                      optionLabel="name"
+                      optionValue="name"
+                      placeholder="Dept"
                       [(ngModel)]="rowData[col.field]"
-                      required
-                    />
-                  </mat-form-field>
+                    ></p-dropdown>
+                  </ng-container>
+
+                  <ng-container *ngSwitchDefault>
+                    <mat-form-field appearance="standard">
+                      <mat-label>{{ col.title }}</mat-label>
+                      <input
+                        matInput
+                        type="{{ col.element_type }}"
+                        placeholder="New {{ col.field }}"
+                        [(ngModel)]="rowData[col.field]"
+                        required
+                      />
+                    </mat-form-field>
+                  </ng-container>
+
+                  <br />
+                  <small *ngIf="onValidationError" class="color-rd">
+                    {{ col.title }} must be filled out.
+                  </small>
                 </ng-container>
-
-                <br />
-                <small *ngIf="onValidationError" class="color-rd">
-                  {{ col.title }} must be filled out.
-                </small>
-              </ng-container>
-            </ng-template>
-            <ng-template pTemplate="output">
-              <ng-container
-              [ngSwitch]="
-              col.field === 'permissions'
-              ? 'permissions'
-              : -1
-          "
-              >
-
-                <ng-container *ngSwitchDefault>
+              </ng-template>
+              <ng-template pTemplate="output">
+                <ng-container
+                  [ngSwitch]="col.field === 'permissions' ? 'permissions' : -1"
+                >
+                  <ng-container *ngSwitchDefault>
                     {{ rowData[col.field] }}
+                  </ng-container>
                 </ng-container>
+              </ng-template>
+            </p-cellEditor>
+          </td>
+        </tr>
+      </ng-template>
+      <ng-template pTemplate="footer" let-columns>
+        <tr [formGroup]="createNewDeptForm" *ngIf="createNewDeptForm">
+          <td class="sticky-column-checkboxes">
+            <button
+              *ngIf="!tglAddDept"
+              matTooltip="Add new dept"
+              matTooltipPosition="above"
+              (click)="toggleCreateNewDept()"
+              class="mini-iconbutton-neumorphism add-dept-i"
+            >
+              <i class="bi bi-plus-lg"></i>
+            </button>
+            <button
+              *ngIf="tglAddDept"
+              (click)="cancelCreateNewDept()"
+              class="iconbutton-neumorphism"
+            >
+              <i class="pi pi-times"></i>
+            </button>
+            <button
+              *ngIf="tglAddDept"
+              (click)="saveCreateNewDept()"
+              [ngClass]="
+                !createNewDeptForm.invalid
+                  ? 'iconbutton-neumorphism'
+                  : 'iconbutton-neumorphism-disabled'
+              "
+            >
+              <i class="pi pi-check"></i>
+            </button>
+          </td>
+          <td *ngFor="let col of columns">
+            <ng-container
+              *ngIf="tglAddDept"
+              [ngSwitch]="col.field === 'lead' ? 'lead' : -1"
+            >
+              <ng-container *ngSwitchCase="'lead'">
+                <p-dropdown
+                  [options]="selectLeads"
+                  class="input-neumorphism"
+                  optionLabel="name"
+                  optionValue="name"
+                  placeholder="Dept"
+                  formControlName="{{ col.field }}"
+                ></p-dropdown>
               </ng-container>
-            </ng-template>
-          </p-cellEditor>
-        </td>
-      </tr>
-    </ng-template>
-    <ng-template pTemplate="footer" let-columns>
-      <tr [formGroup]="createNewDeptForm" *ngIf="createNewDeptForm">
-        <td class="sticky-column-checkboxes">
-          <button *ngIf="!tglAddDept" matTooltip="Add new dept"
-          matTooltipPosition="above"
-            (click)="toggleCreateNewDept()"
-            class="mini-iconbutton-neumorphism add-dept-i"
-          >
-          <i class="bi bi-plus-lg"></i>
 
-          </button>
-          <button *ngIf="tglAddDept"
-            (click)="cancelCreateNewDept()"
-            class="iconbutton-neumorphism"
-          >
-            <i class="pi pi-times"></i>
-          </button>
-          <button *ngIf="tglAddDept"
-          (click)="saveCreateNewDept()"
-          [ngClass]="!createNewDeptForm.invalid ? 'iconbutton-neumorphism' : 'iconbutton-neumorphism-disabled'"
-          >
-            <i class="pi pi-check"></i>
-          </button>
-        </td>
-        <td *ngFor="let col of columns" >
-          <ng-container *ngIf="tglAddDept" 
-          [ngSwitch]="
-          col.field === 'lead'
-          ? 'lead'
-          : -1
-      "
-    >
-
-    <ng-container *ngSwitchCase="'lead'">
-      <p-multiSelect [options]="selectLeads" formControlName="{{ col.field }}" optionLabel="name" optionValue="name" placeholder="Leads"></p-multiSelect>
-    </ng-container>
-
-      <ng-container *ngSwitchDefault>
-        <mat-form-field appearance="standard">
-          <mat-label>{{ col.title }}</mat-label>
-          <input
-            matInput
-            type="{{ col.element_type }}"
-            placeholder="New {{ col.field }}"
-            formControlName="{{ col.field }}"
-            required
-          />
-        </mat-form-field>
-      </ng-container>
-                
-
-                <br />
-                <small *ngIf="onValidationError" class="color-rd">
-                  {{ col.title }} must be filled out.
-                </small>
+              <ng-container *ngSwitchDefault>
+                <mat-form-field appearance="standard">
+                  <mat-label>{{ col.title }}</mat-label>
+                  <input
+                    matInput
+                    type="{{ col.element_type }}"
+                    placeholder="New {{ col.field }}"
+                    formControlName="{{ col.field }}"
+                    required
+                  />
+                </mat-form-field>
               </ng-container>
-          
-        </td>
-      </tr>
-  </ng-template>
-    <ng-template pTemplate="paginatorleft">
-      <p-button
-        type="button"
-        icon="pi pi-plus"
-        styleClass="p-button-text"
-      ></p-button>
-    </ng-template>
-    <ng-template pTemplate="paginatorright">
-      <p-button
-        type="button"
-        icon="pi pi-cloud"
-        styleClass="p-button-text"
-      ></p-button>
-    </ng-template>
-  </p-table>
-</div>
+
+              <br />
+              <small *ngIf="onValidationError" class="color-rd">
+                {{ col.title }} must be filled out.
+              </small>
+            </ng-container>
+          </td>
+        </tr>
+      </ng-template>
+      <ng-template pTemplate="paginatorleft">
+        <p-button
+          type="button"
+          icon="pi pi-plus"
+          styleClass="p-button-text"
+        ></p-button>
+      </ng-template>
+      <ng-template pTemplate="paginatorright">
+        <p-button
+          type="button"
+          icon="pi pi-cloud"
+          styleClass="p-button-text"
+        ></p-button>
+      </ng-template>
+    </p-table>
+  </div>
 
   <p-confirmDialog rejectLabel="Cancel" acceptLabel="Accept"></p-confirmDialog>
   <p-toast life="5000" position="top-center"></p-toast>
