--- a/src/app/components/admin-template/admin-template.component.css
+++ b/src/app/components/admin-template/admin-template.component.css
@@ -41,9 +41,8 @@
   box-shadow: none !important;
 }
 
-.type-container{
+.type-container {
   margin-top: 1.9rem;
-
 }
 
 ::ng-deep .p-dialog {
@@ -55,7 +54,15 @@
 }
 
 ::ng-deep p-celleditor > p-dropdown > .p-dropdown,
-.form-row > .type-container > .form-check > ::ng-deep p-dropdown > .p-dropdown, ::ng-deep .p-datatable .p-datatable-tfoot > tr > td ::ng-deep p-dropdown > .p-dropdown {
+.form-row > .type-container > .form-check > ::ng-deep p-dropdown > .p-dropdown,
+::ng-deep
+  .p-datatable
+  .p-datatable-tfoot
+  > tr
+  > td
+  ::ng-deep
+  p-dropdown
+  > .p-dropdown {
   border-bottom: none !important;
   width: 100%;
 }
@@ -65,6 +72,14 @@
   padding-top: 0 !important;
 }
 
+::ng-deep .input-disabled-neumorphism .p-checkbox .p-checkbox-box.p-highlight,
+::ng-deep .input-disabled-neumorphism .p-dropdown,
+::ng-deep .input-disabled-neumorphism .p-dropdown .p-dropdown-trigger,
+::ng-deep .input-disabled-neumorphism .p-dropdown .p-dropdown-label {
+  outline: 0 !important;
+  box-shadow: none !important;
+  cursor: default !important;
+}
 
 .form-row > div > ::ng-deep p-dropdown > .p-dropdown {
   width: 100%;
@@ -79,8 +94,13 @@
   animation: none;
 }
 
-.admin-template-table-container ::ng-deep.p-datatable .p-datatable-thead>tr>th:first-child {
-  box-shadow: inset 6px 6px 17px -10px hsl(230, 4%, 73%), inset 0px -3px 0px -2px #d1d9e6 !important;
+.admin-template-table-container
+  ::ng-deep.p-datatable
+  .p-datatable-thead
+  > tr
+  > th:first-child {
+  box-shadow: inset 6px 6px 17px -10px hsl(230, 4%, 73%),
+    inset 0px -3px 0px -2px #d1d9e6 !important;
 }
 
 .table-status
@@ -98,20 +118,24 @@
   .p-datatable-tbody
   > tr:last-child
   > td:first-child {
-    border-bottom-left-radius: 0 !important;
-    box-shadow: inset 24px -17px 8px -24px #b8b9be, inset -4px 0px 0px -2px #d1d9e6 !important;
-
+  border-bottom-left-radius: 0 !important;
+  box-shadow: inset 24px -17px 8px -24px #b8b9be,
+    inset -4px 0px 0px -2px #d1d9e6 !important;
 }
 
-.table-status ::ng-deep
-.p-datatable
-.p-datatable-tbody .sticky-column-checkboxes {
+.table-status
+  ::ng-deep
+  .p-datatable
+  .p-datatable-tbody
+  .sticky-column-checkboxes {
   box-shadow: inset 5px 0 5px -4px #b8b9be, inset -4px 0px 0px -2px #d1d9e6;
 }
 
-.table-status ::ng-deep
-.p-datatable
-.p-datatable-tbody .sticky-checkboxes-main {
+.table-status
+  ::ng-deep
+  .p-datatable
+  .p-datatable-tbody
+  .sticky-checkboxes-main {
   box-shadow: inset 9px 9px 9px -9px #b8b9be, inset 0px -3px 0px -2px #d1d9e6,
     inset -4px 0px 0px -2px #d1d9e6 !important;
 }
@@ -132,7 +156,7 @@
   padding: 0.55rem 0.9rem 0.55rem 0.9rem;
 }
 
-.delete-btn{
+.delete-btn {
   padding: 0.55rem 0.9rem 0.55rem 0.9rem !important;
   font-size: 0.9rem !important;
   border-radius: 2rem !important;
@@ -160,8 +184,8 @@
   padding-bottom: 0.4rem;
   margin-top: 1rem;
   height: 2.4rem;
-    max-width: 9rem;
-    margin-left: 25%;
+  max-width: 9rem;
+  margin-left: 25%;
   color: white;
 }
 
@@ -200,46 +224,51 @@
   vertical-align: middle;
 }
 
-.create-template .badge-status, .remove-btn-container{
+.create-template .badge-status,
+.remove-btn-container {
   margin-top: 1.97rem !important;
 }
 
-.create-template  ::ng-deep.mat-form-field{
+.create-template ::ng-deep.mat-form-field {
   width: 96%;
 }
 
-.field-container ::ng-deep.mat-form-field{
+.field-container ::ng-deep.mat-form-field {
   width: 91%;
-
 }
 
-.section-status{
-  padding-left: .5rem !important;
-  padding-right: .5rem !important;
+.section-status {
+  padding-left: 0.5rem !important;
+  padding-right: 0.5rem !important;
 }
-.create-template  ::ng-deep.mat-form-field-appearance-standard .mat-form-field-flex, .create-template  ::ng-deep.mat-form-field-appearance-standard .mat-form-field-infix{
+.create-template
+  ::ng-deep.mat-form-field-appearance-standard
+  .mat-form-field-flex,
+.create-template
+  ::ng-deep.mat-form-field-appearance-standard
+  .mat-form-field-infix {
   width: 100%;
 }
 .create-template .badge-status {
   width: 100% !important;
-  color: white;  
+  color: white;
   text-align: center;
 }
 
-.create-template ::ng-deep .mat-form-field-wrapper{
+.create-template ::ng-deep .mat-form-field-wrapper {
   padding-bottom: 0 !important;
 }
-.template-label-container{
-  padding-top: .48rem;
+.template-label-container {
+  padding-top: 0.48rem;
 }
 
-.add-status-i{
+.add-status-i {
   min-width: 3rem;
 }
 
-::ng-deep .p-datatable .p-datatable-tfoot > tr > td{
+::ng-deep .p-datatable .p-datatable-tfoot > tr > td {
   background-color: #e6e7ee;
-  border-width:0;
+  border-width: 0;
   border: none;
   text-align: center;
   font-weight: normal;
@@ -247,67 +276,71 @@
 }
 
 ::ng-deep .p-datatable .p-datatable-tfoot > tr {
-  border:none;
+  border: none;
   border-top: 0.0625rem solid #d1d9e6;
   box-shadow: inset 5px 0 5px -4px #b8b9be, inset -4px 0px 0px -2px #d1d9e6;
 }
 
-::ng-deep .p-datatable .p-datatable-tfoot > tr > td:last-child{
+::ng-deep .p-datatable .p-datatable-tfoot > tr > td:last-child {
   box-shadow: inset -16px -15px 10px -13px #fff;
 }
 
-::ng-deep .p-datatable .p-datatable-tfoot > tr > td:first-child{
-  box-shadow: inset 0px -13px 9px -12px #fff, inset 24px -17px 8px -24px #b8b9be,  inset -4px 0px 0px -2px #d1d9e6 ;
+::ng-deep .p-datatable .p-datatable-tfoot > tr > td:first-child {
+  box-shadow: inset 0px -13px 9px -12px #fff, inset 24px -17px 8px -24px #b8b9be,
+    inset -4px 0px 0px -2px #d1d9e6;
 }
 
-.create-template-container{
+.create-template-container {
   padding: 0 1rem 0 1rem;
 }
-.section-add-status{
+.section-add-status {
   padding-top: 0.32rem !important;
-
 }
 
-.tag-btn, .cancel-tag-btn{
+.tag-btn,
+.cancel-tag-btn {
   float: right;
   margin-top: 0 !important;
 }
-  .badge-btn{
-    display: none;
-    width: 10rem !important;
-    margin-top: 0 !important;
-    font-weight: bold;
-    float: right;
-    text-align: center;
-    position: absolute;
-    right: 0rem;
-  }
+.badge-btn {
+  display: none;
+  width: 10rem !important;
+  margin-top: 0 !important;
+  font-weight: bold;
+  float: right;
+  text-align: center;
+  position: absolute;
+  right: 0rem;
+}
 
-  .badge-btn:hover, .badge-btn:focus{
-    box-shadow: inset 2px 2px 5px #b8b9be;
-    animation: pulse 3s infinite;
-    outline: none;
-  }
-  .status-btn:hover .tag-btn,.status-btn:focus .tag-btn{
-    display: none;
-  }
-  
-  .status-btn:hover .badge-btn, .status-btn:focus .badge-btn{
-    display: inline-flex;
-  }
+.badge-btn:hover,
+.badge-btn:focus {
+  box-shadow: inset 2px 2px 5px #b8b9be;
+  animation: pulse 3s infinite;
+  outline: none;
+}
+.status-btn:hover .tag-btn,
+.status-btn:focus .tag-btn {
+  display: none;
+}
 
-  .status-title{
-    border-top: 2px dotted #cfcfd6;
-    border-bottom: 2px dotted #cfcfd6;
-    width: 100%;
-    text-align: center;
-    padding: 1rem 0rem 1rem 0rem;
-    color: #44476a;
-    margin-top: 1rem;
-    background-color: #e0e1e9;
-    border-radius: 1rem;
-  }
+.status-btn:hover .badge-btn,
+.status-btn:focus .badge-btn {
+  display: inline-flex;
+}
 
-  .status-name-container .input-neumorphism{
-    width: 94% !important;
-  }
+.status-title {
+  border-top: 2px dotted #cfcfd6;
+  border-bottom: 2px dotted #cfcfd6;
+  width: 100%;
+  text-align: center;
+  padding: 1rem 0rem 1rem 0rem;
+  color: #44476a;
+  margin-top: 1rem;
+  background-color: #e0e1e9;
+  border-radius: 1rem;
+}
+
+.status-name-container .input-neumorphism {
+  width: 94% !important;
+}
