--- a/src/app/components/form/form.component.css
+++ b/src/app/components/form/form.component.css
@@ -83,7 +83,7 @@ textarea {
 }
 
 ::ng-deep .modifyingAddress .p-dialog {
-  width: 44% !important;
+  width: 54% !important;
 }
 
 ::ng-deep .modifyingAddress .p-dropdown,
@@ -112,6 +112,7 @@ textarea {
 ::ng-deep .modifyingAddress .p-dropdown .p-dropdown-panel {
   width: 14rem;
   left: -11px !important;
+  background: #e6e7ee;
 }
 
 ::ng-deep .modifyingAddress .button-neumorphism {
@@ -125,7 +126,7 @@ textarea {
 }
 
 .modifyingAddress ::ng-deep.p-dropdown-items-wrapper {
-  max-height: 6rem !important;
+  max-height: 5rem !important;
 }
 
 .modifyingAddress ::ng-deep .mat-form-field-infix {
@@ -249,4 +250,8 @@ textarea {
   margin-left: 0.5rem;
   position: absolute;
   top: 0.3rem;
+}
+
+::ng-deep .col-smaller {
+  width: 14rem !important;
 }
