--- a/src/app/components/phone/phone.component.css
+++ b/src/app/components/phone/phone.component.css
@@ -1,48 +1,49 @@
-.phone-header{
+.phone-header {
   padding: 0 1rem 0 1rem;
 }
 
-.button-inline{
-  margin: 0rem 0rem  1rem 0rem;
-  padding: 0rem .44rem  0rem .44rem;
+.button-inline {
+  margin: 0rem 0rem 1rem 0rem;
+  padding: 0rem 0.44rem 0rem 0.44rem;
   width: 100%;
 }
 
-.iconbutton-neumorphism.btnCall{
+.iconbutton-neumorphism.btnCall {
   margin-left: 0.5rem;
-  border-radius: .55rem;
+  border-radius: 0.55rem;
   padding-left: 0.59rem;
   padding-top: 0.5rem !important;
 }
 
-.phone-history{
-  height: 57rem;
+.phone-history {
+  height: 58rem;
   overflow-y: scroll;
 }
 
-.phone-log{
-  padding: .55rem 1rem 0 1rem;
-  border: .0625rem solid transparent;
-  border-radius: .55rem;
-  margin-top: .22rem;
-  margin-left: .4rem;
+.phone-log {
+  padding: 0.55rem 1rem 0 1rem;
+  border: 0.0625rem solid transparent;
+  border-radius: 0.55rem;
+  margin-top: 0.22rem;
+  margin-left: 0.4rem;
 }
 
 .phone-log:hover {
   background-color: #e6e7ee;
-  border: .0625rem solid #d1d9e6;
-  transition: all .2s ease-in-out;
+  border: 0.0625rem solid #d1d9e6;
+  transition: all 0.2s ease-in-out;
   box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff;
 }
 
-h6, p {
+h6,
+p {
   margin: 0;
 }
 
-.container-neumorphism{
+.container-neumorphism {
   padding: 1rem;
-  border-radius: .55em;
-  border: .0625rem solid #d1d9e6;
+  border-radius: 0.55em;
+  border: 0.0625rem solid #d1d9e6;
   color: #44476a;
   background-color: #e6e7ee;
   box-shadow: 2px 2px 5px #b8b9be;
@@ -50,32 +51,31 @@ h6, p {
   animation: pulse 3s infinite;
 }
 
-.container-neumorphism:hover, 
-.container-neumorphism:focus{
+.container-neumorphism:hover,
+.container-neumorphism:focus {
   background-color: rgba(38, 40, 51, 0.03);
 }
 
-.border-bottom{
-  padding-bottom: .44rem !important;
-  border-bottom: .0625rem solid #d1d9e6 !important;
-  margin-bottom: .44rem;
+.border-bottom {
+  padding-bottom: 0.44rem !important;
+  border-bottom: 0.0625rem solid #d1d9e6 !important;
+  margin-bottom: 0.44rem;
 }
 
-.change-on-hold{
+.change-on-hold {
   background-color: rgba(38, 40, 51, 0.03);
   color: #c5c6cb;
 }
 
-.filter-notes-container{
+.filter-notes-container {
   padding: 0rem 2rem 0rem 2rem;
 }
 
-.filter-notes-container ::ng-deep .mat-form-field{
+.filter-notes-container ::ng-deep .mat-form-field {
   width: 100%;
-
 }
 
-.filter-notes-container{
+.filter-notes-container {
   position: sticky;
   z-index: 1;
   top: 0;
@@ -88,22 +88,22 @@ h6, p {
   border-bottom: none !important;
 }
 
-.phone-header ::ng-deep .p-dropdown .p-dropdown-label.p-inputtext{
+.phone-header ::ng-deep .p-dropdown .p-dropdown-label.p-inputtext {
   color: #44476a !important;
-font-weight: 500;
+  font-weight: 500;
 }
 
-.phone-header ::ng-deep .p-dropdown .p-dropdown-panel{
+.phone-header ::ng-deep .p-dropdown .p-dropdown-panel {
   left: -1rem !important;
-    width: 9rem;
+  width: 9rem;
 }
 
-.phone-log .iconbutton-neumorphism{
+.phone-log .iconbutton-neumorphism {
   width: 1.5rem;
   height: 1.8rem;
   padding: 0;
 }
 
-.phone-log i{
-font-size: .7rem;
+.phone-log i {
+  font-size: 0.7rem;
 }
