--- a/src/app/css/neumorphism.component.css
+++ b/src/app/css/neumorphism.component.css
@@ -450,6 +450,12 @@ input:checked + .toggle-slider-neumorphism::before {
   transition: ease-in-out 0.2s;
 }
 
+::ng-deep .input-disabled-neumorphism .p-checkbox .p-checkbox-box.p-highlight {
+  outline: 0 !important;
+  box-shadow: none !important;
+  cursor: default !important;
+}
+
 ::ng-deep.p-checkbox:not(.p-checkbox-disabled) .p-checkbox-box:hover {
   border: 0.2rem solid #d1d9e6;
   color: #44476a;
@@ -895,10 +901,6 @@ input:checked + .toggle-slider-neumorphism::before {
 
 ::ng-deep.p-multiselect-filter-icon {
   top: 58% !important;
-}
-
-::ng-deep.p-multiselect-items-wrapper {
-  max-height: 12rem !important;
 }
 
 ::ng-deep.p-multiselect .p-multiselect-panel {
