--- a/src/styles.css
+++ b/src/styles.css
@@ -266,11 +266,6 @@ textarea {
   font-weight: normal !important;
 }
 
-.input-disabled-neumorphism {
-  outline: 0 !important;
-  box-shadow: none !important;
-}
-
 .no-padding-rt {
   padding-right: 0 !important;
 }
@@ -285,4 +280,10 @@ textarea {
 
 .padding-tp{
   padding-top: 1rem;
+}
+
+.input-disabled-neumorphism {
+  outline: 0 !important;
+  box-shadow: none !important;
+  cursor: default;
 }
